<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cream"
        android:background="@color/cream"
        android:layout_marginHorizontal="20dp"
        android:padding="10dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_is"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/green"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/definition"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <Button
                    android:id="@+id/dont_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_show"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:backgroundTint="@color/green"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/acept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green"
                    app:cardCornerRadius="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="8dp"
                        android:src="@drawable/check"
                        app:tint="@color/white"
                        android:contentDescription="@string/i_check"/>
                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>